[gd_scene load_steps=4 format=4]

[ext_resource type="Script" path="res://UI/score_collected.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://niqu1oi32l2r" path="res://Art/ScoreTextArt.png" id="2"]
[ext_resource type="Texture2D" uid="uid://mfnqsxafxaph" path="res://Art/ScoreIndicatorIcon.png" id="3"]

[node name="ScoreCollected" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1")

[node name="Text" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 156.0
offset_right = 384.0
offset_bottom = 96.0
texture = ExtResource("2")
stretch_mode = 2

[node name="SingleDigits" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_top = -12.0
offset_right = 40.0
offset_bottom = 28.0

[node name="Icon" type="TextureRect" parent="SingleDigits"]
layout_mode = 0
offset_left = 150.0
offset_top = 114.0
offset_right = 228.0
offset_bottom = 192.0
texture = ExtResource("3")
stretch_mode = 2

[node name="LabelContainer" type="SubViewportContainer" parent="SingleDigits"]
custom_minimum_size = Vector2(144, 72)
layout_mode = 0
offset_left = 246.0
offset_top = 120.0
offset_right = 390.0
offset_bottom = 192.0
pivot_offset = Vector2(72, 36)
stretch = true
stretch_shrink = 6

[node name="SubViewport" type="SubViewport" parent="SingleDigits/LabelContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(24, 12)
render_target_update_mode = 0

[node name="Label" type="Label" parent="SingleDigits/LabelContainer/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.9686269760131836, 1, 0.9725490212440491, 1)
theme_override_colors/font_outline_color = Color(0.05490199849009514, 0.06666669994592667, 0.062745101749897, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "3/5"
horizontal_alignment = 1

[node name="DoubleDigits" type="Control" parent="."]
anchors_preset = 0
offset_top = -12.0
offset_right = 40.0
offset_bottom = 28.0

[node name="Icon" type="TextureRect" parent="DoubleDigits"]
layout_mode = 2
offset_left = 96.0
offset_top = 114.0
offset_right = 174.0
offset_bottom = 192.0
texture = ExtResource("3")
stretch_mode = 2

[node name="LabelContainer" type="SubViewportContainer" parent="DoubleDigits"]
custom_minimum_size = Vector2(240, 72)
layout_mode = 0
offset_left = 192.0
offset_top = 120.0
offset_right = 432.0
offset_bottom = 192.0
pivot_offset = Vector2(120, 36)
stretch = true
stretch_shrink = 6

[node name="SubViewport" type="SubViewport" parent="DoubleDigits/LabelContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(40, 12)
render_target_update_mode = 4

[node name="Label" type="Label" parent="DoubleDigits/LabelContainer/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.9686269760131836, 1, 0.9725490212440491, 1)
theme_override_colors/font_outline_color = Color(0.05490199849009514, 0.06666669994592667, 0.062745101749897, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "00/00"
horizontal_alignment = 1

[node name="TripleDigits" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_top = -12.0
offset_right = 40.0
offset_bottom = 28.0

[node name="Icon" type="TextureRect" parent="TripleDigits"]
layout_mode = 0
offset_left = 48.0
offset_top = 114.0
offset_right = 126.0
offset_bottom = 192.0
texture = ExtResource("3")
stretch_mode = 2

[node name="LabelContainer" type="SubViewportContainer" parent="TripleDigits"]
custom_minimum_size = Vector2(336, 72)
layout_mode = 0
offset_left = 138.0
offset_top = 120.0
offset_right = 474.0
offset_bottom = 192.0
pivot_offset = Vector2(168, 36)
stretch = true
stretch_shrink = 6

[node name="SubViewport" type="SubViewport" parent="TripleDigits/LabelContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(56, 12)
render_target_update_mode = 0

[node name="Label" type="Label" parent="TripleDigits/LabelContainer/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.9686269760131836, 1, 0.9725490212440491, 1)
theme_override_colors/font_outline_color = Color(0.05490199849009514, 0.06666669994592667, 0.062745101749897, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "000/000"
horizontal_alignment = 1
